--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,7 @@ section{
 .filterbox:focus {
   box-shadow: 0px 0px 100px 3px #4484c4;
 }
+.home {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
